<resources>
    <string name="app_name">TruckTracking</string>
    <string name="create_plan">Create Plan</string>
    <string name="vehicle_number">TN30NYA983</string>
    <string name="vehicle_name">EICHER MOTOR</string>
    <string name="sim_tracking">SIM TRACKING</string>
    <string name="start">START</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="choose_tracking_type">CHOOSE TRACKING TYPE</string>
    <string name="gps">GPS</string>
    <string name="sim">SIM</string>
    <string name="driver_mobile_num">+91 7766223331</string>
    <string name="initiate">Initiate</string>
    <string name="plan_name">Plan Name</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="select_plan_type">Select Plan Type</string>
    <string name="loading">Loading</string>
    <string name="adhoc">Adhoc</string>
    <string name="service">Service</string>
    <string name="shed">Shed</string>
    <string name="camp_road_chennai">CAMP Road Chennai</string>
    <string name="time">8:00</string>
    <string name="ramesh_ram">Ramesh Ram</string>
    <string name="user_mobile_number">+91 7401098922</string>
    <string name="advanced">Advanced</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="enter_location">Enter Location</string>
    <string name="close">CLOSE</string>
    <string name="save">SAVE</string>
    <string name="contact_person">Contact Person</string>
    <string name="enter_plan_name">Enter Plan Name</string>
    <string name="loading_point">Loading Point</string>
    <string name="date_time_val">25-02-2021 18:35 PM</string>
    <string name="bangalore_port">Bangalore Port</string>
    <string name="loading_point_1">Loading Point 1</string>
    <string name="locading_advanced">Advanced (Loading)</string>
    <string name="new_loading_point">New Loading Point</string>
    <string name="address">Address</string>
    <string name="add_new_location">Add New Location</string>
    <string name="contact_number">Contact Number</string>

    <string-array name="duration">
        <item>10 Mins</item>
        <item>20 Mins</item>
        <item>30 Mins</item>
        <item>40 Mins</item>
        <item>50 Mins</item>
    </string-array>
</resources>