<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_3"
    tools:context=".AddPickupLocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddPickupLocationActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_pickup_location_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="@dimen/dp_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.AppBarOverlay"
            app:title="@string/pickup_location"
            app:titleTextColor="@color/black" />

        <ImageView
            android:id="@+id/add_pickup_location_close_imgvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/shape_circle_outline_black"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/truck_pickup_location_inputbox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_8"
            android:paddingStart="@dimen/dp_8"
            android:backgroundTint="@color/gray"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeWidth="@dimen/dp_1"
            android:theme="@style/input_layout_label_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_pickup_location_toolbar"
            app:startIconDrawable="@drawable/ic_place_24px"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/truck_pick_loc_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_location"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textCursorDrawable="@color/gray"
                android:textColorHint="@color/gray"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/truck_pickup_datetime_inputbox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_8"
            android:paddingStart="@dimen/dp_8"
            android:backgroundTint="@color/gray"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeWidth="@dimen/dp_1"
            android:theme="@style/input_layout_label_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/truck_pickup_location_inputbox"
            app:startIconDrawable="@drawable/ic_date_range_24px"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/truck_pickup_datetime_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/date_amp_time"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:inputType="text"
                android:textCursorDrawable="@color/gray"
                android:textColorHint="@color/gray"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/truck_pickup_contact_person_inputbox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_8"
            android:paddingStart="@dimen/dp_8"
            android:backgroundTint="@color/gray"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeWidth="@dimen/dp_1"
            app:startIconTint="@color/gray"
            android:theme="@style/input_layout_label_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/truck_pickup_datetime_inputbox"
            app:startIconDrawable="@drawable/ic_person_pin_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/truck_pickup_contact_person_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/contact_person"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:inputType="text"
                android:textCursorDrawable="@color/gray"
                android:textColorHint="@color/gray"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/truck_pickup_contact_number_inputbox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_8"
            android:paddingStart="@dimen/dp_8"
            android:backgroundTint="@color/gray"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeWidth="@dimen/dp_1"
            app:startIconTint="@color/gray"
            android:textColorHint="@color/gray"
            android:theme="@style/input_layout_label_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/truck_pickup_contact_person_inputbox"
            app:startIconDrawable="@drawable/ic_icon_ionic_md_keypad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/truck_pickup_contact_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/contact_number"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textCursorDrawable="@color/gray"
                android:textColorHint="@color/gray"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/add_pickup_location_save_btn"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/shape_rect_outline_blue_fill"
            android:gravity="center"
            android:minHeight="@dimen/dp_50"
            android:text="@string/save"
            android:theme="@style/semibold_white_textview_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/truck_pickup_contact_number_inputbox" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>